<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.PredictActivity">


    <Button
        android:id="@+id/btn_apple"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/apple"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectorHeader" />

    <Button
        android:id="@+id/btn_cherry"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/cherry"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_apple" />

    <Button
        android:id="@+id/btn_corn"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/corn"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cherry" />

    <Button
        android:id="@+id/btn_grape"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/grape"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_corn" />

    <Button
        android:id="@+id/btn_peach"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/peach"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_grape" />

    <Button
        android:id="@+id/btn_pepperbell"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/pepperbell"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_peach" />

    <Button
        android:id="@+id/btn_potato"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/potato"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_pepperbell" />

    <Button
        android:id="@+id/btn_strawberry"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/strawberry"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_potato" />

    <Button
        android:id="@+id/btn_tomato"
        android:layout_width="340dp"
        android:layout_height="64dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_card"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/tomato"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"

        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_strawberry" />

    <TextView
        android:id="@+id/selectorHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/select_plant_header"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>