<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.MediaSelectActivity">

    <ImageView
        android:id="@+id/iv_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="64dp"
        android:src="@drawable/img_dummy"
        app:layout_constraintBottom_toTopOf="@+id/gl_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_round"
        android:contentDescription="@string/camera"
        android:fontFamily="@font/popins_med"
        android:src="@drawable/ic_camera"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/gl_4"
        app:layout_constraintTop_toBottomOf="@+id/gl_2" />

    <ImageButton
        android:id="@+id/btn_gallery"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:textColor="@color/white"
        android:layout_marginTop="22dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/popins_med"
        android:src="@drawable/ic_gallery"
        android:contentDescription="@string/gallery"
        app:layout_constraintEnd_toStartOf="@+id/gl_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gl_2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/upload_button"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:padding="8dp"
        android:background="@drawable/button_round"
        android:fontFamily="@font/popins_semibold"
        android:textSize="18sp"
        android:text="@string/predict"
        android:textColor="@color/white"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="523dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="188dp" />

    <ProgressBar
        android:id="@+id/pb_predict"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="Select or take a picture to predict"
        android:fontFamily="@font/popins_semibold"
        app:layout_constraintBottom_toTopOf="@+id/iv_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>